--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <div>By joining, you agree to be contacted about ApplyCall testing.</div>
       </footer>
     </main>
+    <script>
+      window.__APPLYCALL_ENDPOINT__ = 'https://script.google.com/macros/s/AKfycbzEmvQKYbFIT6BvBh6evKcgnbJSX06cFBT0nBsnp7LVgi22fQIazN5SSyxJ-zWLiK0/exec';
+    </script>
     <script src="script.js"></script>
   </body>
 </html>
