--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
       </footer>
     </main>
     <script>
-      window.__APPLYCALL_ENDPOINT__ = 'https://script.google.com/macros/s/AKfycbw3tlBoyDyCqVOTeDQAvFfvSX0fhyr47ReFjSCi1Xsa1RCUsiaIZJJqqDK9Rcnq1HKn/exec';
+      window.__APPLYCALL_ENDPOINT__ = 'https://script.google.com/macros/s/AKfycbxYm9gLoHjAeUe7UKkIP_6Hp9abiGuHGXt62joibd5NgEAWGEa67ppHSd9Vkjl3cKc/exec';
+    </script>
+    <script>
+      window.__AUTOCALLS__ = {
+        endpoint: 'https://app.autocalls.ai/api/user/make_call',
+        assistant_id: 7633,
+        token: '729|jbLVptwcSVU5qIjnjiofEcFoP9a13q4kO1boSFDef715fd32'
+      };
     </script>
     <script src="script.js"></script>
   </body>
