--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="logo">ApplyCall</div>
         <div class="tag">One Call to Find and Apply for all Jobs</div>
       </header>
+      <div class="header-cta">Call (231) 515-4420 to find and apply or request a call back below</div>
       <section class="card">
         <h1 class="title">Be an early tester</h1>
         <form id="interest-form" novalidate>
