--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ input:focus{border-color:var(--brand-2);box-shadow:0 0 0 5px rgba(76,201,240,.18
 .hidden { display: none !important; }
 .small { padding: 8px 16px; font-size: 14px; }
 .header-top { display: flex; align-items: center; justify-content: center; gap: 20px; position: relative; }
-.header-top .button { position: absolute; right: 0; top: 0; }
+.header-top .button { position: absolute; right: 0; top: 0; z-index: 10; }
 .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.8); backdrop-filter: blur(5px); z-index: 1000; display: flex; align-items: center; justify-content: center; padding: 20px; }
 .modal-content { background: #161821; border: 1px solid rgba(255,255,255,0.14); border-radius: 20px; padding: 30px; width: 100%; max-width: 400px; position: relative; box-shadow: 0 20px 60px rgba(0,0,0,0.5); }
 .close-modal { position: absolute; right: 20px; top: 15px; font-size: 28px; color: var(--muted); cursor: pointer; transition: color 0.2s; }
