--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
             </div>
             <div class="profile-stats">
               <div class="stat-item">
-                <div class="stat-value">0</div>
+                <div class="stat-value">1</div>
+                <div class="stat-label">Calls</div>
+              </div>
+              <div class="stat-item">
+                <div class="stat-value">1</div>
                 <div class="stat-label">Applied</div>
               </div>
               <div class="stat-item">
-                <div class="stat-value">0</div>
-                <div class="stat-label">Matches</div>
-              </div>
-              <div class="stat-item">
-                <div class="stat-value">0</div>
-                <div class="stat-label">Views</div>
+                <div class="stat-value">3</div>
+                <div class="stat-label">Recommendations</div>
               </div>
             </div>
           </div>
@@ -252,3 +252,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
