--- a/index.html
+++ b/index.html
@@ -104,19 +104,15 @@
               <div class="profile-avatar-img">👤</div>
             </div>
             <div class="profile-stats">
-              <div class="stat-item">
-                <div class="stat-value">1</div>
-                <div class="stat-label">Calls</div>
-              </div>
-              <div class="stat-item">
-                <div class="stat-value">1</div>
-                <div class="stat-label">Applied</div>
-              </div>
-              <div class="stat-item">
-                <div class="stat-value">3</div>
-                <div class="stat-label">Recommendations</div>
-              </div>
+            <div class="stat-item">
+              <div class="stat-value">1</div>
+              <div class="stat-label">Call</div>
             </div>
+            <div class="stat-item">
+              <div class="stat-value">1</div>
+              <div class="stat-label">Applied</div>
+            </div>
+          </div>
           </div>
 
           <div class="profile-grid">
@@ -252,4 +248,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
