--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             </div>
             <div class="profile-stats">
             <div class="stat-item">
-              <div class="stat-value">1</div>
-              <div class="stat-label">Call</div>
+              <div id="stat-calls-count" class="stat-value">0</div>
+              <div class="stat-label">Calls</div>
             </div>
             <div class="stat-item">
-              <div class="stat-value">1</div>
+              <div id="stat-applications-count" class="stat-value">0</div>
               <div class="stat-label">Applied</div>
             </div>
           </div>
