--- a/index.html
+++ b/index.html
@@ -245,6 +245,6 @@
         token: '729|jbLVptwcSVU5qIjnjiofEcFoP9a13q4kO1boSFDef715fd32'
       };
     </script>
-    <script src="script.js"></script>
+    <script src="script.js?v=1.1"></script>
   </body>
 </html>
