--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p><strong>Effective Date:</strong> January 15, 2026</p>
           <p><strong>1. ABOUT US</strong> ApplyCall.jobs is operated by BLAT Ltd, headquartered at 86-90 Paul Street, London, England, United Kingdom, EC2A 4NE. For all data inquiries, please contact ben@applycall.com.</p>
           <p><strong>2. DATA CATEGORIES AND AI PROCESSING</strong> By using our service, you provide us with specific categories of personal data:</p>
-          <p><strong>Audio Recordings and Transcripts:</strong> We record phone interviews and use Generative AI (including GPT-5 models) to transcribe and analyze your voice data.</p>
+          <p><strong>Audio Recordings and Transcripts:</strong> We record phone interviews and use various LLM and AI models (including those operated by OpenAI) to transcribe and analyze your voice data.</p>
           <p><strong>Search DNA:</strong> Our "Candidate Recommender" engine uses automated profiling to evaluate your skills, career goals, and professional experience.</p>
           <p><strong>Contact Data:</strong> We collect your name, phone number, and email address, primarily processed for SMS-based identity verification (OTP).</p>
           <p><strong>3. LAWFUL BASIS FOR PROCESSING</strong> We process your data under the following legal frameworks:</p>
@@ -301,3 +301,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
