--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
       </div>
     </div>
 
+    <div id="apply-modal" class="modal hidden">
+      <div class="modal-content" style="max-width: 600px; max-height: 80vh; overflow-y: auto;">
+        <span id="apply-modal-close" class="close-modal">&times;</span>
+        <div id="apply-modal-content"></div>
+      </div>
+    </div>
+
     <main class="page">
       <header class="header-top">
         <div class="logo">ApplyCall</div>
